--- a/Sorted.API/Properties/launchSettings.json
+++ b/Sorted.API/Properties/launchSettings.json
@@ -24,8 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7007;https://www.sorted.com;http://localhost:3000",
-      //"applicationUrl": "https://www.sorted.com;http://localhost:3000",
+      "applicationUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
